// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<div>
  <button
    class="rc-button rc-button--default rc-button--normal"
  >
    <div
      class="rc-button__content"
    />
  </button>
</div>
`;

exports[`Button should change icon class prefix when using icon-prefix prop 1`] = `
<div>
  <button
    class="rc-button rc-button--default rc-button--normal"
  >
    <div
      class="rc-button__content"
    >
      <i
        class="rc-badge__wrapper rc-button__icon my-icon my-icon-success"
      />
    </div>
  </button>
</div>
`;

exports[`Button should render buttton group correctly 1`] = `
<div>
  <div
    class="rc-button-group"
  >
    <button
      class="rc-button rc-button--primary rc-button--normal"
    >
      <div
        class="rc-button__content"
      >
        <span
          class="rc-button__text"
        >
          next step
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Button should render correctly when icon is JSX element 1`] = `
<div>
  <button
    class="rc-button rc-button--default rc-button--normal"
  >
    <div
      class="rc-button__content"
    >
      <i
        class="rc-badge__wrapper van-icon van-icon-shop-o"
      />
    </div>
  </button>
</div>
`;

exports[`Button should render empty button without errors 1`] = `
<div>
  <button
    class="rc-button rc-button--default rc-button--normal"
  >
    <div
      class="rc-button__content"
    >
      <span
        class="rc-button__text"
      />
    </div>
  </button>
</div>
`;
